internet_gateway.tf
resource "aws_internet_gateway" "prod_igw" {
  vpc_id = aws_vpc.prod_vpc.id
  tags   = { Name = "prod-igw" }
}
